<resources>
    <string name="app_name">Serving Size Calculator</string>
    <string name="select_a_pot_to_use">Select a pot to use</string>
    <string name="add_pot">ADD POT</string>
    <string name="string_add_pot">\@string/add_pot</string>
    <string name="select_pot_to_use">Select pot to use</string>
    <string name="pot_name">Pot Name:</string>
    <string name="name_field_hint">Pot name</string>
    <string name="pot_weight_g">Pot Weight (g):</string>
    <string name="weight_field_hint">Pot weight in g</string>
    <string name="of_servings"># of Servings</string>
    <string name="pot">Pot</string>
    <string name="serving_weight">Serving Weight</string>
    <string name="weight_empty_g">Weight Empty (g)</string>
    <string name="weight_of_food_g">Weight of food (g)</string>
    <string name="weight_with_food_g">Weight with food (g)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="variableString">%1$s</string>
    <string name="variableInteger">%1$i</string>
    <string name="goBack">Return</string>
    <string name="food_weight_g">Food Weight (g)</string>
    <string name="defaultVal">0</string>
    <string name="delete">DELETE</string>
    <string name="features">Features:\nAction Bar\nEdit Pot\nDelete Pot\nInput Error Check\n</string>
</resources>
