<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculate_serving"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.medipack.servingsizecalculator.calculateServing">

    <TextView
        android:text="@string/pot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/nameHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/weight_empty_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightEmpty"
        android:layout_below="@+id/nameHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/weight_of_food_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodWeight"
        android:layout_below="@+id/weightWithFood"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <Button
        android:text="@string/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/goBack" />

    <TextView
        android:text="@string/weight_with_food_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/weightWithFood"
        android:layout_below="@+id/weightEmpty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/of_servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/servingNum"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/foodWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/servingNumField"
        android:hint="@string/of_servings"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/servingNum"
        android:layout_alignBottom="@+id/servingNum"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/totalWeightField"
        android:layout_alignBaseline="@+id/weightWithFood"
        android:layout_alignBottom="@+id/weightWithFood"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="number"
        android:hint="@string/weight_with_food_g"
        android:textSize="14sp" />

    <TextView
        android:text="@string/variableInteger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listedPotWeight"
        android:layout_above="@+id/weightWithFood"
        android:layout_alignLeft="@+id/totalWeightField"
        android:layout_alignStart="@+id/totalWeightField" />

    <TextView
        android:text="@string/variableString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potName"
        android:layout_above="@+id/weightEmpty"
        android:layout_alignLeft="@+id/listedPotWeight"
        android:layout_alignStart="@+id/listedPotWeight" />

    <TextView
        android:text="@string/serving_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/servingWeight"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/servingNumField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/defaultVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcServingWeight"
        android:layout_alignBaseline="@+id/servingWeight"
        android:layout_alignBottom="@+id/servingWeight"
        android:layout_alignLeft="@+id/servingNumField"
        android:layout_alignStart="@+id/servingNumField"
        android:textSize="24sp" />

    <TextView
        android:text="@string/defaultVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcFoodWeight"
        android:layout_alignBaseline="@+id/foodWeight"
        android:layout_alignBottom="@+id/foodWeight"
        android:layout_alignLeft="@+id/totalWeightField"
        android:layout_alignStart="@+id/totalWeightField" />

</RelativeLayout>
