<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_apot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.medipack.servingsizecalculator.addAPot">

    <TextView
        android:text="@string/pot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/pot_weight_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PotWeight"
        android:layout_marginTop="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/potName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/NameField"
        android:inputType="text"
        android:hint="@string/name_field_hint"
        style="@style/Widget.AppCompat.EditText"
        android:layout_alignBaseline="@+id/potName"
        android:layout_alignBottom="@+id/potName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/NameField"
        android:layout_alignLeft="@+id/NameField"
        android:layout_alignStart="@+id/NameField"
        android:id="@+id/weightField"
        android:hint="@string/weight_field_hint"
        android:inputType="numberDecimal" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/Cancel" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Cancel"
        android:layout_toLeftOf="@+id/Cancel"
        android:layout_toStartOf="@+id/Cancel"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/OK" />

</RelativeLayout>
